traefik-landing-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dp-traefik-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
##    ingress.kubernetes.io/rewrite-target : /
##    ingress.kubernetes.io/add-base-url: "true"

spec:
  rules:
  - host : data-players.com
    http:
      paths:
      - path : /
        backend:
          serviceName: semanticbus-traefik-service
          servicePort: 80
      - path : /config
        backend:
          serviceName: data-players-strongbox-service
          servicePort: 80
